@@ -1,20 +1,14 @@
 package core.escutrack.model;
 
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.Map;
-/* import java.time.LocalDate;
- * import java.time.DateTimeFormatter;
- * 
- */
 
-/* +++
- * Este código de aquí contiene la entidad Paciente, su constructor y distintas funcionalidades
- * de getter y setter a cada uno de sus parámetros. Esto se relaciona después con el archivo de
- * ControladorHospital para mantener los parámetros de Paciente privados y seguros dentro de
- * este archivo.
- * @author Felipe T.S
- * 
- * 
- --- */
+import java.time.LocalDateTime;
+  
+ 
+
+
 
 public class Paciente {
 	
@@ -22,16 +16,18 @@ public class Paciente {
 	private String nombre;
 	private int nivelGravedad;
 	private String idCamaAsignada;
-	/*
-	 * tipoVariable horaIngreso;
-	 * tipoVariable horaEgreso;
-	 */
 	
-	public Paciente (String rut, String nombre, String gradoGravedad){
+	private LocalDateTime fechaIngreso;
+	private LocalDateTime fechaEgreso;
+	 
+	
+	public Paciente (String rut, String nombre, String gradoGravedad,LocalDateTime fechaIngreso){
 		this.rut = rut;
 		this.nombre= nombre;
 		this.nivelGravedad= parseGradoGravedad(gradoGravedad);
 		this.idCamaAsignada= null;
+		this.fechaIngreso = fechaIngreso;
+		this.fechaEgreso = null;
 	}
 	
 	/* +++
@@ -39,12 +35,20 @@ public class Paciente {
 	 * Aquí hacemos uso de una tabla hash incluida en la librería de util.Map de Java
 	 * para poder asignar los niveles de gravedad con la menor complejidad temporal
 	 * posible haciendo uso de sus etiquetas cualitativas como keys.
-	 *
-	 * Como punto extra, considerar añadir una variable de tipo date para almacenar
-	 * la fecha y ahora a la que el paciente ingresó al establecimiento, cuándo se
-	 * dió de alta y cuándo quedó disponible la cama que se le fue asignada.
 	 --- */
-	private static final Map<String, Integer> ESTADO_CLINICO = Map.of("indefinido",0, "estable",1, "moderado",2, "urgente",3, "severo",4, "critico",5);
+	
+	private static final Map<String, Integer> ESTADO_CLINICO;
+	
+	static {
+		Map<String, Integer> map = new HashMap<>();
+		map.put("indefinido",0);
+		map.put("estable",1);
+		map.put("moderado",2);
+		map.put("urgente",3);
+		map.put("severo",4);
+		map.put("critico",5);
+		ESTADO_CLINICO = Collections.unmodifiableMap(map);
+	}
 	
 	private static int parseGradoGravedad(String gradoGravedad) {
 		if(gradoGravedad == null) return 0;
@@ -54,6 +58,16 @@ public class Paciente {
 			throw new IllegalArgumentException("Nivel de gravedad desconocido: " + nivelGravedad);
 		}
 		return nivelGravedad;
+	}
+	
+	@Override
+	public String toString() { //SIA 6	
+	    return "Nombre: " + nombre + "\n" +
+	           "Estado: " + nivelGravedad + "\n" +
+	           "RUT: " + rut + "\n" +
+	           "Cama asignada: " + idCamaAsignada + "\n" +
+	           "Fecha de ingreso" + fechaIngreso + "\n" + 
+	           "Fecha de egreso" + fechaEgreso;
 	}
 	
 	
@@ -68,5 +82,12 @@ public class Paciente {
 	
 	public String getIdCamaAsignada() {return this.idCamaAsignada;}
 	public void setIdCamaAsignada(String idCamaAsignada) {this.idCamaAsignada = idCamaAsignada;}
+	
+	public LocalDateTime getFechaIngreso() {return fechaIngreso;}
+	public void setFechaIngreso(LocalDateTime fechaIngreso) {this.fechaIngreso = fechaIngreso;}
+	
+	public LocalDateTime getFechaEgreso() {return fechaEgreso;}
+	public void setFechaEgreso(LocalDateTime fechaEgreso) {this.fechaEgreso = fechaEgreso;}
+	
 	
 }
